--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.552.0",
     "mongoose": "^8.20.1",
-    "next": "16.0.1",
+    "next": "^15.2.0",
     "nodemailer": "^7.0.10",
     "react": "19.2.0",
     "react-dom": "19.2.0",
@@ -26,7 +26,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "eslint": "^9",
-    "eslint-config-next": "16.0.1",
+    "eslint-config-next": "^15.2.0",
     "tailwindcss": "^4"
   }
 }
